# watchmatcher

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_groups_invite_code.py  0003_match_human_feedback.py  0004_sell_offer_manufacture_year.py  0005_backfill_sell_offer_year_refs.py  0006_backfill_offer_years.py  0007_search_alarms.py  0008_visual_attributes.py  0009_search_alarm_visual_criteria.py  0010_dial_variant.py
app/: __init__.py  main.py
app/alerts/: formatter.py  search_alarm_service.py  service.py  telegram.py
app/core/: config.py  database.py  enums.py  logging.py  security.py
app/fx/: __init__.py  xe_client.py
app/ingestion/: dedupe.py  image_store.py  media_redis.py  service.py
app/matching/: calibration.py  candidate_search.py  profit.py  reporting_fx.py  scoring.py  service.py
app/models/: __init__.py  _mixins.py  _types.py  alert.py  buy_request.py  embedding.py  group.py  match.py  parsed_message.py  raw_message.py  review_action.py  search_alarm.py  sell_offer.py  source_account.py  watch_entity.py  workspace.py
app/normalization/: catalog_loader.py  service.py  similarity.py
app/parsing/: classifier.py  dictionaries.py  llm_extractor.py  regexes.py  rules.py  service.py  vision_extract.py  (+2 more)
deploy/: nginx-brimit.de.conf  nginx-dashboard-snippet.conf  nginx-https-same-origin.example.conf  nginx_patch_root_to_dashboard.py  vps-deploy-dashboard-nginx.sh
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
scripts/: seed.py  ssh-watchmatch-openssh.cmd  ssh-watchmatch-openssh.ps1  ssh-watchmatch.cmd
tests/: conftest.py
(+74 files in other folders)
