[project]
name = "watchmatch"
version = "0.1.0"
description = "AI assistant for filtering watch trading messages from chat groups"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "watchmatch" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "arq>=0.26.3",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "openai>=1.54.0",
    "tenacity>=9.0.0",
    "rapidfuzz>=3.10.1",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.11",
    "pgvector>=0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "freezegun>=1.5.1",
    "respx>=0.21.1",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
